--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     
     <hello-world></hello-world>
+    <custom-button btitle="click one more time"></custom-button>
 
     <script type='module' src="Helloworld.js"></script>
-
+    <script type='module' src="CustomButton.js"></script>
     <p>
 
     </p>
